syntax = "proto3";

package user;

service UserService {
  rpc AddUser(UserRequest) returns (UserResponse);
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc ListUsers(Empty) returns (UserListResponse);
}

message UserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message Empty {}
